--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+  <meta property="og:title" content="Kocham Cię!">
+  <meta property="og:image" content="https://nasze101.github.io/wspomnienia/zasoby/logo.svg">
+
 <script>
   window.location.href = "menu.html";
 </script>
