--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <meta property="og:title" content="Kocham Cię!">
+  <meta property="og:title" content="Kocham Cię Kochanie">
   <meta property="og:image" content="https://nasze101.github.io/wspomnienia/zasoby/logo.svg">
 
 <script>
